Init Sentry
